--- a/1.html
+++ b/1.html
@@ -85,7 +85,59 @@
       <h2>1 Month Training Diary (13 JUN 2024 - 11 JUL 2024)</h2>
       <h2>@ Nirvighna Services Pvt Lmt.</h2>
 
-      
+      <!-- Week 1: Flutter Basics -->
+      <details open>
+        <summary style="list-style: none">
+          <h2 class="week-heading">Week 1: Flutter Basics</h2>
+        </summary>
+        <div class="day-entry">
+          <h3>Day 1 - Introduction to Flutter</h3>
+          <p>
+            - Set up the Flutter environment.<br />
+            - Created a basic Flutter app using the scaffold widget.<br />
+            - Learned about the Flutter widget tree and hot reload feature.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 2 - Flutter Widgets</h3>
+          <p>
+            - Explored commonly used widgets like Container, Row, Column, and
+            Text.<br />
+            - Practiced styling widgets using properties like padding, margin,
+            and alignment.<br />
+            - Built a simple UI layout using nested widgets.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 3 - State Management Basics</h3>
+          <p>
+            - Introduced stateful and stateless widgets.<br />
+            - Managed local state using the setState() method.<br />
+            - Built a counter app to understand state management in Flutter.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 4 - Forms and Input Handling</h3>
+          <p>
+            - Created forms using TextFormField widgets.<br />
+            - Validated form input using the Validator function.<br />
+            - Handled form submission and extracted input data.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 5 - Layouts and Customization</h3>
+          <p>
+            - Worked with Flutter's layout widgets (Stack, GridView,
+            ListView).<br />
+            - Customized themes, colors, and fonts for the app.<br />
+            - Practiced building responsive UI layouts.
+          </p>
+        </div>
+      </details>
     </div>
   </body>
 </html>
