--- a/1.html
+++ b/1.html
@@ -138,6 +138,63 @@
           </p>
         </div>
       </details>
+      <!-- Week 2: Flutter Advanced Features -->
+      <details>
+        <summary style="list-style: none">
+          <h2 class="week-heading">Week 2: Flutter Advanced Features</h2>
+        </summary>
+        <div class="day-entry">
+          <h3>Day 6 - Navigation and Routing</h3>
+          <p>
+            - Implemented navigation between screens using the Navigator
+            widget.<br />
+            - Explored named routes for easier navigation management.<br />
+            - Created a multi-screen app with navigation.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 7 - Flutter Packages</h3>
+          <p>
+            - Explored the pub.dev package repository.<br />
+            - Installed and integrated external packages like provider and
+            http.<br />
+            - Used packages to enhance app functionality.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 8 - State Management with Provider</h3>
+          <p>
+            - Learned the basics of Provider for state management.<br />
+            - Refactored the app to use Provider for state management.<br />
+            - Explored ChangeNotifier and Consumer widgets.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 9 - Networking and APIs</h3>
+          <p>
+            - Implemented API calls using the http package.<br />
+            - Parsed JSON responses and displayed data in the app.<br />
+            - Built a Flutter app that fetches and displays data from a REST
+            API.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 10 - Clean Architecture in Flutter</h3>
+          <p>
+            - Explored the principles of Clean Architecture.<br />
+            - Structured the Flutter app using layers: presentation, domain, and
+            data.<br />
+            - Implemented dependency injection to manage dependencies
+            effectively.<br />
+            - Ensured separation of concerns for better maintainability and
+            testability.
+          </p>
+        </div>
+      </details>
     </div>
   </body>
 </html>
