--- a/1.html
+++ b/1.html
@@ -195,6 +195,59 @@
           </p>
         </div>
       </details>
+
+      <!-- Week 3: React Basics -->
+      <details>
+        <summary style="list-style: none">
+          <!-- Week 3: React Basics -->
+          <h2 class="week-heading">Week 3: React Basics</h2>
+        </summary>
+
+        <div class="day-entry">
+          <h3>Day 11 - Introduction to React</h3>
+          <p>
+            - Set up a basic React app using Create React App.<br />
+            - Explored components, props, and state.<br />
+            - Learned about JSX and rendering elements.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 12 - Components and Props</h3>
+          <p>
+            - Created functional and class components.<br />
+            - Passed data between components using props.<br />
+            - Managed component lifecycle methods.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 13 - State Management in React</h3>
+          <p>
+            - Introduced useState and useEffect hooks.<br />
+            - Managed state in functional components.<br />
+            - Built a simple counter app with hooks.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 14 - Event Handling in React</h3>
+          <p>
+            - Handled user events like clicks and form submissions.<br />
+            - Implemented controlled components for form inputs.<br />
+            - Validated user input on forms.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 15 - React Router</h3>
+          <p>
+            - Set up React Router for client-side navigation.<br />
+            - Implemented routing and nested routes.<br />
+            - Built a multi-page app with navigation.
+          </p>
+        </div>
+      </details>
     </div>
   </body>
 </html>
