--- a/1.html
+++ b/1.html
@@ -248,6 +248,61 @@
           </p>
         </div>
       </details>
+
+      <!-- Week 4: Next.js Advanced -->
+      <details>
+        <summary style="list-style: none">
+          <!-- Week 4: Next.js Advanced -->
+          <h2 class="week-heading">Week 4: Next.js Advanced</h2>
+        </summary>
+
+        <div class="day-entry">
+          <h3>Day 16 - Introduction to Next.js</h3>
+          <p>
+            - Set up a basic Next.js app.<br />
+            - Explored the file-based routing system.<br />
+            - Learned about server-side rendering (SSR) and static site
+            generation (SSG).
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 17 - Pages and Components in Next.js</h3>
+          <p>
+            - Created dynamic pages and components.<br />
+            - Used Link for client-side navigation.<br />
+            - Built reusable React components in Next.js.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 18 - Fetching Data in Next.js</h3>
+          <p>
+            - Implemented data fetching with getStaticProps and
+            getServerSideProps.<br />
+            - Practiced fetching data from an external API.<br />
+            - Built a blog using static site generation (SSG).
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 19 - Dynamic Routing in Next.js</h3>
+          <p>
+            - Implemented dynamic routing in Next.js.<br />
+            - Created dynamic pages using route parameters.<br />
+            - Built a multi-page app with dynamic content.
+          </p>
+        </div>
+
+        <div class="day-entry">
+          <h3>Day 20 - Optimizing Next.js for Production</h3>
+          <p>
+            - Learned about performance optimization techniques.<br />
+            - Implemented image optimization and lazy loading.<br />
+            - Prepared the Next.js app for production deployment.
+          </p>
+        </div>
+      </details>
     </div>
   </body>
 </html>
