--- a/1.html
+++ b/1.html
@@ -303,6 +303,18 @@
           </p>
         </div>
       </details>
+
+      <!-- Internship Completion Certificate -->
+      <details>
+        <summary style="list-style: none">
+          <h2 class="week-heading">Internship Completion Certificate</h2>
+        </summary>
+        <img
+          src="image.png"
+          alt="Internship Completion Certificate"
+          style="display: block; margin: 0 auto; max-width: 100%"
+        />
+      </details>
     </div>
   </body>
 </html>
